--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 
   "homepage": "https://github.com/gorenje/node-red-contrib-uglifyjs#readme",
   "license": "Don't do evil.",
-  "author": "Joe Blog <joe.blog@spreads-the.love>",
+  "author": "Gerrit Riessen <do.you@spread-the.love>",
   "engines": {
     "node": ">=14"
   },
