--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node-red", "uglifyjs", "uglify-js"
   ],
 
-  "homepage": "https://github.com/gorenje/node-red-contrib-uglifyjs#readme",
+  "homepage": "https://flowhub.org/f/1cb1d34936a3b179",
   "license": "Don't do evil.",
   "author": "Gerrit Riessen <gerrit@openmindmap.org>",
   "engines": {
